fixed contrast an cleaner look, fixed video centering

--- a/css/nav.css
+++ b/css/nav.css
@@ -41,7 +41,7 @@ main{
 
 .logo img{
     height:7vw;
-    width:7vw;
+    width:9vw;
 }
 
 .logo h1{
