--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ header, footer{
 
 header .logo img{
     max-height: 100px;
-    max-width: 100px;
+    max-width: 110px;
 }
 
 
@@ -148,6 +148,8 @@ footer{
     }
 
     .videowrapper iframe{
+        display:block;
+        margin:0 auto;
         max-width:1280px;
         max-height:720px;
         display:flex;
